# PopWork

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  NOTICE  README.md  Readme.md  SECURITY.md  SWTri_8hpp_source.html  TODO.md  annotated.html  appbase_8hpp_source.html  aureader_8hpp_source.html  autocrit_8hpp_source.html  bassmusicinterface_8hpp_source.html  buffer_8hpp_source.html  buttonlistener_8hpp_source.html  buttonwidget_8hpp_source.html  checkbox_8hpp_source.html  checkboxlistener_8hpp_source.html  classPopWork_1_1AppBase-members.html  classPopWork_1_1AppBase.html  classPopWork_1_1BassMusicInfo-members.html  classPopWork_1_1BassMusicInfo.html  classPopWork_1_1BassMusicInterface-members.html  classPopWork_1_1BassMusicInterface.html  classPopWork_1_1ErrorHandler-members.html  classPopWork_1_1ErrorHandler.html  classPopWork_1_1ImGuiManager-members.html  classPopWork_1_1ImGuiManager.html  classPopWork_1_1JsonParser-members.html  classPopWork_1_1JsonParser.html  classPopWork_1_1MusicInterface-members.html  (+145 more)
PopWork/: CMakeLists.txt  appbase.cpp  appbase.h  appbase.hpp  common.cpp  common.h  common.hpp  popapp.cpp  popapp.hpp
PopWork/api/: discord.cpp  discord.hpp
PopWork/audio/: CMakeLists.txt  aureader.h  bass.h  bassmusicinterface.cpp  bassmusicinterface.h  bassmusicinterface.hpp  musicinterface.cpp  musicinterface.h  musicinterface.hpp  openalsoundinstance.cpp  openalsoundinstance.hpp  openalsoundinterface.cpp  openalsoundinterface.h  openalsoundmanager.cpp  openalsoundmanager.h  openalsoundmanager.hpp  soundinstance.h  soundinstance.hpp  soundmanager.h  soundmanager.hpp
PopWork/debug/: CMakeLists.txt  debug.cpp  debug.h  debug.hpp  errorhandler.cpp  errorhandler.hpp  memmgr.h  memmgr.hpp  perftimer.cpp  perftimer.h  perftimer.hpp
PopWork/graphics/: CMakeLists.txt  color.cpp  color.h  color.hpp  font.cpp  font.h  font.hpp  graphics.cpp  graphics.h  graphics.hpp  image.cpp  image.h  image.hpp  imagefont.cpp  imagefont.h  imagefont.hpp  memoryimage.cpp  memoryimage.h  memoryimage.hpp  nativedisplay.cpp  nativedisplay.h  nativedisplay.hpp  quantize.cpp  quantize.h  quantize.hpp  sdlimage.cpp  sdlimage.h  sdlimage.hpp  sdlinterface.cpp  sdlinterface.h  sdlinterface.hpp  sharedimage.cpp  sharedimage.h  sharedimage.hpp  sysfont.cpp  sysfont.h  sysfont.hpp
PopWork/imagelib/: CMakeLists.txt  imagelib.cpp  imagelib.h  imagelib.hpp
PopWork/imgui/: debugwindow.cpp  imguimanager.cpp  imguimanager.hpp
PopWork/math/: CMakeLists.txt  math.hpp  matrix.cpp  matrix.h  matrix.hpp  mtrand.cpp  mtrand.h  mtrand.hpp  point.h  point.hpp  popmath.hpp  popmatrix.cpp  popmatrix.h  popvector.h  ratio.cpp  ratio.h  ratio.hpp  rect.h  rect.hpp  trivertex.h  trivertex.hpp  vector.h  vector.hpp
PopWork/misc/: CMakeLists.txt  autocrit.h  autocrit.hpp  buffer.cpp  buffer.h  buffer.hpp  critsect.h  critsect.hpp  flags.h  flags.hpp  httptransfer.cpp  httptransfer.h  httptransfer.hpp  keycodes.cpp  keycodes.h  keycodes.hpp  profile.cpp  profile.h  profile.hpp  smartptr.h  smartptr.hpp  workerthread.cpp  workerthread.hpp
PopWork/paklib/: gpak.hpp  pakinterface.cpp  pakinterface.h  pakinterface.hpp
PopWork/readwrite/: descparser.cpp  descparser.h  descparser.hpp  jsonparser.cpp  jsonparser.hpp  modval.cpp  modval.h  modval.hpp  xmlparser.cpp  xmlparser.h  xmlparser.hpp  xmlwriter.cpp  xmlwriter.h  xmlwriter.hpp
PopWork/resources/: propertiesparser.cpp  propertiesparser.h  propertiesparser.hpp  resourcemanager.cpp  resourcemanager.h  resourcemanager.hpp
PopWork/widget/: buttonlistener.h  buttonlistener.hpp  buttonwidget.cpp  buttonwidget.h  buttonwidget.hpp  checkbox.cpp  checkbox.h  checkbox.hpp  checkboxlistener.h  checkboxlistener.hpp  cursorwidget.cpp  cursorwidget.h  cursorwidget.hpp  dialog.cpp  dialog.h  dialog.hpp  dialogbutton.cpp  dialogbutton.h  dialogbutton.hpp  dialoglistener.h  dialoglistener.hpp  editlistener.h  editlistener.hpp  editwidget.cpp  editwidget.h  editwidget.hpp  flashwidget.cpp  flashwidget.h  hyperlinkwidget.cpp  hyperlinkwidget.h  hyperlinkwidget.hpp  insets.cpp  insets.h  insets.hpp  listlistener.h  listlistener.hpp  listwidget.cpp  listwidget.h  listwidget.hpp  scrollbarwidget.cpp  (+24 more)
SexyAppFramework/: CMakeLists.txt  Common.cpp  Common.h  SexyAppBase.cpp  SexyAppBase.h
SexyAppFramework/Audio/: BassMusicInterface.cpp  BassMusicInterface.h  MusicInterface.cpp  MusicInterface.h  OpenALSoundManager.cpp  OpenALSoundManager.h  SoundInstance.h  SoundManager.h  openalsoundinterface.cpp  openalsoundinterface.h
SexyAppFramework/Debug/: Debug.cpp  Debug.h  PerfTimer.cpp  PerfTimer.h  memmgr.h
SexyAppFramework/Graphics/: CMakeLists.txt  Color.cpp  Color.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ImageFont.cpp  ImageFont.h  MemoryImage.cpp  MemoryImage.h  NativeDisplay.cpp  NativeDisplay.h  Quantize.cpp  Quantize.h  SDLImage.cpp  SDLImage.h  SDLInterface.cpp  SDLInterface.h  SharedImage.cpp  SharedImage.h  SysFont.cpp  SysFont.h
SexyAppFramework/ImageLib/: CMakeLists.txt  ImageLib.cpp  ImageLib.h
SexyAppFramework/Math/: CMakeLists.txt  MTRand.cpp  MTRand.h  Point.h  Ratio.cpp  Ratio.h  Rect.h  SexyMatrix.cpp  SexyMatrix.h  SexyVector.h  TriVertex.h
SexyAppFramework/Misc/: AutoCrit.h  Buffer.cpp  Buffer.h  CritSect.h  Flags.h  HTTPTransfer.cpp  HTTPTransfer.h  KeyCodes.cpp  KeyCodes.h  Profile.cpp  Profile.h  SmartPtr.h
SexyAppFramework/PakLib/: CMakeLists.txt  PakInterface.cpp  PakInterface.h
SexyAppFramework/ReadWrite/: CMakeLists.txt  DescParser.cpp  DescParser.h  ModVal.cpp  ModVal.h  XMLParser.cpp  XMLParser.h  XMLWriter.cpp  XMLWriter.h
SexyAppFramework/Resources/: CMakeLists.txt  PropertiesParser.cpp  PropertiesParser.h  ResourceManager.cpp  ResourceManager.h
SexyAppFramework/Widget/: ButtonListener.h  ButtonWidget.cpp  ButtonWidget.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  CursorWidget.h  (+35 more)
demos_src/: CMakeLists.txt  Res.cpp  Res.h  res.cpp  res.h
examples/: CMakeLists.txt  README.md
source/: CMakeLists.txt
(+686 files in other folders)
